5.1.7 -> 5.1.8:
    - jbj: yarn: stub-in rpmmi pool handling under NOTYET.
    - jbj: QNX: avoid conflicting db defines for __mutex_lock/__mutex_unlock.
    - jbj: yarn: convert rpmdb refcount to usage mutex.
    - jbj: yarn: convert psm refcount to usage mutex.
    - jbj: yarn: convert rpmxar refcount to usage mutex.
    - jbj: yarn: convert pgpDig refcount to usage mutex (avoid recurse deadlock).
    - jbj: yarn: convert rpmts refcount to usage mutex (avoid recurse deadlock).
    - jbj: rpmps: fix: avoid reusing items from pool for now.
    - jbj: yarn: convert rpmtsi refcount to usage mutex.
    - jbj: yarn: convert rpmsx refcount to usage mutex.
    - jbj: yarn: convert rpmps refcount to usage mutex.
    - jbj: rpmds: fix: avoid pooling rpmdsThis/rpmdsSingle for now ...
    - jbj: headerReload: fix: don't free the header blob.
    - jbj: yarn: convert rpmte to a usage mutex (no refcounts).
    - jbj: yarn: convert rpmgi refcount to usage mutex.
    - jbj: yarn: use the pool changes where possible.
    - jbj: yarn: add generic Link/Unlink refcount diddlers.
    - jbj: yarn: add debugging, reuse counter, and zlog to rpmioPool.
    - jbj: yarn: trick up a __FILE__:__LINE__ from caller when failing too.
    - jbj: yarn: use EINVAL, not -1, for --without-pthreads portability.
    - jbj: yarn: glibc pthreads (at least) returns errno's, strrerror decodes.
    - jbj: yarn: fix: assert fail instead of exit on error.
    - jbj: yarn: use the pool allocator.
    - jbj: yarn: add a pool allocator.
    - jbj: yarn: convert rpmfi refcounts to usage mutexes.
    - jbj: yarn: convert rpmds refcounts to usage mutexes.
    - jbj: yarn: convert Header refcounts to usage mutexes.
    - jbj: yarn: convert urlInfo refcounts to usage mutexes.
    - jbj: yarn: convert FD_t refcounts to usage mutexes.
    - jbj: zlog: backport from HEAD.
    - jbj: yarn: backport from HEAD (likely --with-pthreads needed todo++).
    - jbj: bzdio: handle multiblock compressed payloads transparently.