@@ -1,4 +1,6 @@
 5.1.7 -> 5.1.8:
+    - jbj: yarn: stub in (*init)() and (*fini)() pool item methods.
+    - jbj: yarn: add a (*dbg)() formatter to make fdLink() generic.
     - jbj: yarn: stub-in rpmmi pool handling under NOTYET.
     - jbj: QNX: avoid conflicting db defines for __mutex_lock/__mutex_unlock.
     - jbj: yarn: convert rpmdb refcount to usage mutex.
